--- a/src/index.css
+++ b/src/index.css
@@ -6,8 +6,16 @@
     background-color: hsl(230, 17%, 14%);
     color: white;
 }
+
+body.dark .box{
+    background-color: hsl(228, 28%, 20%);
+}
 .light{
-    background-color: hsl(225, 100%, 98%);
+    background-color: white;
+}
+
+body.light .box{
+    background-color: hsl(227, 47%, 96%);
 }
 
 /* Base styles — for mobile (default) */
@@ -32,6 +40,7 @@ header {
 }
 
 .social-box{
+    width: auto;
     display: grid;
     grid-template-columns: auto;
     gap: 1em;
@@ -42,7 +51,6 @@ header {
 .box{
     height: 200px;
     width: auto;
-    background-color: #007BFF;
     border-radius: 0.8rem;
     display: flex;
     align-items: center;
@@ -78,8 +86,10 @@ header {
 /* Medium screens (tablets) */
 @media (min-width: 600px) {
   body {
-    background: black;
+    
   }
+
+  
 
   main {
     max-width: 600px;
@@ -94,8 +104,31 @@ header {
     font-size: 1.5rem;
   }
 
-  main {
-    font-size: 1.2rem;
+  hr{
+    display: none;
   }
+
+ .social-box{
+    width: 90%;
+    display: grid;
+    grid-template-columns: auto auto auto auto;
+    gap: 1em;
+    
+
+}
+
+
+#root{
+     display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+    
+.Header{
+    width: 90%;
+}
+
+
 }
  
